[Generics]- adding copy method implementation and test pass